# OtusFX

./: .gitignore  APP_IMPROVEMENTS.md  FINANCIALS_TEMPLATE.md  INVESTOR_CHECKLIST.md  OtusFX_5min_pitch.md  OtusFX_investor_pitch.md  PRIVACY_IMPLEMENTATION_SUMMARY.md  PRIVACY_INTEGRATION_COMPLETE.md  PRIVACY_INTEGRATION_PLAN.md  README.md  SMART_CONTRACTS_TODO.md
OtusAcademy/: README.md
OtusAcademy/education/: FX-TRADING-101.md  PRIVACY-101.md  VIDEOS.md  WHY-PRIVACY-MATTERS.md
OtusAcademy/providers/: 01-ARCIUM.md  02-PRIVACY-CASH.md  03-SHADOWWIRE.md  04-LIGHT-PROTOCOL.md  05-ELUSIV.md
OtusFX_docs/: 00-SOLANA-STRATEGY.md  01-PRIVACY-ARCHITECTURE.md  02-BOOTSTRAP-MECHANICS.md  03-TOKEN-SUPPORT.md  04-TECHNICAL-STACK.md  05-FUTURE-LEVERAGE-RD.md  06-TRADING-ENGINE-DESIGN.md  07-OTUS-TOKENOMICS.md  08-WEEKEND-IMPACT.md
otusfx/: .dockerignore  .gitignore  Anchor.toml  BOOTSTRAP_DESIGN.md  BUILD.md  Cargo.toml  Dockerfile  HACKATHON.md  LENDING_DESIGN.md  MVP_STATUS.md  OTUS_TOKENOMICS.md  PRIVACY.md  PROGRAMS_SUMMARY.md  TOOLCHAIN_NOTES.md  docker-build.sh  otus-distribution-summary.json  otus-mint-devnet.txt  package-lock.json  package.json  usd1-mint-devnet.txt
otusfx/.cargo/: config.toml
otusfx/programs/bootstrap-pool/: Cargo.toml
otusfx/programs/bootstrap-pool/src/: error.rs  lib.rs
otusfx/programs/bootstrap-pool/src/instructions/: claim_otus_rewards.rs  close_bootstrap.rs  deposit_usdc.rs  initialize_bootstrap.rs  initialize_user_deposit.rs  mint_scops_nft.rs  mod.rs  withdraw_usdc.rs
otusfx/programs/bootstrap-pool/src/state/: config.rs  mod.rs  user_deposit.rs
otusfx/programs/lending-pool/: Cargo.toml
otusfx/programs/lending-pool/src/: error.rs  lib.rs
otusfx/programs/lending-pool/src/instructions/: accrue_pool_interest.rs  borrow_for_leverage.rs  claim_otus_rewards.rs  deposit_liquidity.rs  deposit_liquidity_private.rs  initialize_lender_position.rs  initialize_lending.rs  mod.rs  repay_borrow.rs  update_lending_config.rs  withdraw_liquidity.rs  withdraw_liquidity_private.rs
otusfx/programs/lending-pool/src/state/: borrow_position.rs  config.rs  lender_position.rs  mod.rs
otusfx/programs/lending-pool/src/utils/: mod.rs
otusfx/programs/otusfx/: Cargo.toml
otusfx/programs/otusfx/src/: error.rs  lib.rs
otusfx/programs/otusfx/src/instructions/: close_position.rs  initialize.rs  mod.rs  open_position.rs  trigger_deleverage.rs  update_config.rs
otusfx/programs/otusfx/src/state/: config.rs  mod.rs  position.rs
otusfx/programs/otusfx/src/utils/: math.rs  mod.rs  pyth.rs
otusfx/scripts/: create-devnet-usd1.sh  create-otus-token.sh  distribute-otus-simple.ts  distribute-otus.ts  tsconfig.json
otusfx/tests/: otusfx.ts
web/: .gitignore  MIGRATION_GUIDE.md  PRIVACY_MOCK_README.md  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: Architecture.tsx  AutoDeleverage.tsx  Background.tsx  ComingSoonModal.tsx  EncryptedBackground.tsx  Features.tsx  (+15 more)
(+60 files in other folders)
