[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
spl-token = "=4.0.0"
blake3 = { version = "=1.5.5", features = ["digest"] }
jobserver = "=0.1.31"
getrandom = "0.2"
toml_edit = "=0.21.1"
indexmap = "=2.2.6"
spl-discriminator = "=0.2.2"
spl-type-length-value = "=0.4.3"
spl-tlv-account-resolution = "=0.6.3"
spl-transfer-hook-interface = "=0.6.3"
spl-token-metadata-interface = "=0.3.3"
spl-token-group-interface = "=0.2.3"
spl-pod = "=0.2.2"
spl-program-error = "=0.4.1"
mpl-token-metadata = "3.2.3"

# Privacy integrations
arcium-anchor = "0.6.5"
bulletproofs = "4.0"
curve25519-dalek = "4"
merlin = "3"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

