[package]
name = "otusfx"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "otusfx"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
spl-token = { workspace = true }
blake3 = { workspace = true }
jobserver = { workspace = true }
getrandom = { workspace = true }
toml_edit = { workspace = true }
indexmap = { workspace = true }
spl-discriminator = { workspace = true }
spl-type-length-value = { workspace = true }
spl-tlv-account-resolution = { workspace = true }
spl-transfer-hook-interface = { workspace = true }
spl-token-metadata-interface = { workspace = true }
spl-token-group-interface = { workspace = true }
spl-pod = { workspace = true }
spl-program-error = { workspace = true }


